--- a/templates/template.html
+++ b/templates/template.html
@@ -1,20 +1,14 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Flask Template Example</title>
-    <meta name="viewport" 
-          content="width=device-width, initial-scale=1.0">
-  </head>
-  <body>
-    <div id="main">
-      <p>My string: {{my_string}}</p>
-      <p>Value from the list: {{my_list[3]}}</p>
-      <p>Loop through the list:</p>
-      <ul>
-        {% for n in my_list %}
-        <li>{{n}}</li>
-        {% endfor %}
-      </ul>
-    </div>
-  </body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+<h3>This is the start of my child template</h3>
+<p>My string: {{my_string}}</p>
+<p>Value from the list: {{my_list[3]}}</p>
+<p>Loop through the list:</p>
+<ul>
+  {% for n in my_list %}
+  <li>{{n}}</li>
+  {% endfor %}
+</ul>
+<h3>This is the end of my child template</h3>
+{% endblock %}
