using super() in templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,5 +11,10 @@
       {%block content %}{% endblock %}
       <h2>This is part of my base template.</h2>
     </div><!-- /#main -->
+    <footer>
+      {% block footer %}
+      Watch! This part of the footer is ocming from the base template!
+      {% endblock %}
+    </footer>
   </body>
 </html>
