--- a/templates/template.html
+++ b/templates/template.html
@@ -16,4 +16,5 @@
 {% block footer %}
 {{ super() }}
 And this comes from the child template!
+Generated at: {{ current_time | datetimefilter }}
 {% endblock %}
